<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mafia. Cards for party game with friends. Werewolf</string>
    <string name="title_activity_game_type">GameTypeActivity</string>
    <string name="test_mafia_title">Standart Mafia Cart Game</string>
    <string name="role_civilian">Citizen</string>
    <string name="role_mafia">Mafia</string>
    <string name="role_detective">Detective</string>
    <string name="role_immortal">Immortal</string>
    <string name="role_doctor">Doctor</string>
    <string name="role_don">Don</string>
    <string name="role_maniac">Maniac</string>
    <string name="role_wervoolf">Wervoolf</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prev_game">Previous game</string>
    <string name="play">Take cards</string>
    <string name="rоles">Cards info</string>
    <string name="create_deck">Choose your deck</string>
    <string name="dialog_number_of_player">Enter the number of players</string>
    <string name="dialog_number_of_player_positive_btn">GO!</string>
    <string name="message_tap_to_see_card">Long press to see your card</string>
    <string name="message_tap_to_hide_card">Tap to hide your card</string>
    <string name="player">player</string>
    <string name="final_dialog_title">All players have seen their cards</string>
    <string name="final_dialog_message">P.S. If someone forgets his card, there is the "Previous game" in the Main Menu. Have a nice game!</string>
    <string name="final_dialog_go_to_main_menu">To Main Menu</string>
    <string name="positive_button_text">OK</string>
    <string name="error">Error</string>
    <string name="wrong_player_count">You entered an incorrect number of players</string>
    <string name="in_you_deck">In you deck</string>
    <string name="cards">cards</string>
    <string name="error_add_some_cards">Add some cards</string>
    <string name="are_you_like_app">Enjoying mafia?</string>
    <string name="review_app">5-Star rating from you help us provide free updates</string>
    <string name="review_now">Rate Now</string>
    <string name="later_review">Ask me later</string>
    <string name="never_review">Don\'t Rate</string>
    <string name="add_card_dialog_role_name">Card title:</string>
    <string name="add_card_dialog_description">Card description:</string>
    <string name="add_card_dialog_title">Create new card</string>
    <string name="create">Create</string>
    <string name="no_description">No info</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Card deletion</string>
    <string name="delete_dialog_message">Are you sure you want to delete card \"%s\"</string>
    <string name="save">Save</string>
    <string name="change_card">Change a card</string>
    <string name="clear_deck">Clear the deck</string>
    <string name="clear_deck_dialog_message">Are you sure you want to clear the deck?</string>
    <string name="clear">Clear</string>

</resources>
