<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prev_game"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/play_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/prev_game"
            android:textColor="@color/main_screen_btn_text_color"
            android:textSize="@dimen/big_text"
            android:textStyle="italic"
            app:fontFamily="@font/stylo_family" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/creator_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/play"
            android:textColor="@color/main_screen_btn_text_color"
            android:textSize="@dimen/big_text"
            android:textStyle="italic"
            app:fontFamily="@font/stylo_family" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/creator_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/rules_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/create_deck"
            android:textColor="@color/main_screen_btn_text_color"
            android:textSize="@dimen/big_text"
            android:textStyle="italic"
            app:fontFamily="@font/stylo_family" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rules_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:text="@string/rоles"
            android:textColor="@color/main_screen_btn_text_color"
            android:textSize="@dimen/big_text"
            android:textStyle="italic"
            app:fontFamily="@font/stylo_family" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/role_mafia"
            android:textColor="@color/red"
            android:textSize="@dimen/very_very_big_text"
            app:fontFamily="@font/stylo_family" />
    </RelativeLayout>
</layout>