<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_above="@+id/save_btn"
        android:listSelector="@android:color/transparent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:text="@string/play"
        android:textSize="@dimen/big_text" />

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/card_count_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_above_card_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in_you_deck"
                android:textColor="@color/card_count_color"
                android:textSize="@dimen/normal_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/card_count_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="10"
                android:textColor="@color/card_count_color"
                android:textSize="@dimen/big_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_below_card_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cards"
                android:textColor="@color/card_count_color"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/clearDeckButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/addCardButton"
            android:contentDescription="@string/clear_deck"
            android:src="@drawable/ic_refresh_black_24dp"
            android:tint="@color/card_text_color" />

        <ImageButton
            android:id="@+id/addCardButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/add_card_dialog_title"
            android:src="@drawable/ic_add_black_24dp"
            android:tint="@color/card_text_color" />
    </RelativeLayout>
</RelativeLayout>