<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.morrowbone.mafiacards.app.activity.CreatorActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/city_ver2_law_quality" />

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:id="@+id/name_layout"
        android:background="@color/gray_alfa_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/deck_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="@dimen/big_text"
            android:textColorHint="@color/orange"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/card_count_layout"
            android:hint="@string/deck_name_hint"
            android:maxLines="2" />

        <LinearLayout
            android:id="@+id/card_count_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_above_card_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in_you_deck"
                android:textColor="@color/red"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/card_count_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/red"
                android:textSize="@dimen/big_text" />

            <TextView
                android:id="@+id/text_below_card_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/small_text"
                android:text="@string/cards"
                android:textColor="@color/red" />
        </LinearLayout>


    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save_btn"
        android:listSelector="@android:color/transparent"
        android:layout_below="@+id/name_layout"></ListView>


    <Button
        android:paddingTop="10dp"
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:textSize="@dimen/big_text"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

</RelativeLayout>